# tarapore_2017_plosone

./: .gitmodules  CMakeLists.txt  FMEA_ForagingScenario.odt  LICENSE.md  README  README.md  epuckforaging.txt  foraging.txt
conf/: epuck_diffusion_1.argos  epuck_foraging.argos  epuck_foraging_noise.argos  epuck_foraging_resposchange_noise.argos  epuck_hom_swarm.argos  epuck_hom_swarm.argos~  epuck_hom_swarm_behavtrans_noise.argos  epuck_hom_swarm_noise.argos  epuck_hom_swarm_noise_r100.argos  template_epuck_hom_swarm.argos
controllers/: CMakeLists.txt  CMakeLists.txt~
controllers/behaviors/: aggregatebehavior.cpp  aggregatebehavior.h  antiphototaxisbehavior.cpp  antiphototaxisbehavior.h  behavior.cpp  behavior.h  circlebehavior.cpp  circlebehavior.h  dispersebehavior.cpp  dispersebehavior.h  flockingbehavior.cpp  flockingbehavior.h  homingtofoodbeaconbehavior.cpp  homingtofoodbeaconbehavior.h  phototaxisbehavior.cpp  phototaxisbehavior.h  randomwalkbehavior.cpp  randomwalkbehavior.h
controllers/epuck_diffusion/: CMakeLists.txt  CMakeLists.txt~  epuck_diffusion.cpp  epuck_diffusion.h
controllers/epuck_foraging/: CMakeLists.txt  CMakeLists.txt~  aggregatebehavior.h  antiphototaxisbehavior.cpp  antiphototaxisbehavior.h  behavior.h  (+10 more)
controllers/epuck_hom_swarm/: CMakeLists.txt  epuck_hom_swarm.cpp  epuck_hom_swarm.h
docs/: FMEA_ForagingScenario.odt  Kinematics.nb
experiment_data/: launch.sh  template_epuck_hom_swarm.argos
experiments/: epuck_diffusion_10.argos  epuck_foraging.argos  epuck_foraging.argos~  epuck_hom_swarm.argos
loop_functions/: CMakeLists.txt
(+53 files in other folders)
